# RREngine

./: .gitignore  404.html  CMakeLists.txt  LICENSE  LICENSE.txt  PreLoad.cmake  README.md  TODO.md  config.h.in  index.html  mkdocs.yml  search.html  win_resources.rc
builtin/conf/: fonts.xml
builtin/tileset/: fontmap.xcf.bz2
cmake/: dependencies.cmake  depends.cmake  options.cmake
data/conf/: README.txt  characters.xml  entities.xml  fonts.xml  game.xml  movies.xml  music.xml  sprites.xml
data/conf/sprites/: characters.xml
data/map/: README.txt
data/movie/: README.txt
data/music/: README.txt  actiontheme-v3.flac  summer_sunday.flac
data/scene/: map1.tmx
data/sfx/: README.txt
data/sprite/: README.txt  character.xcf.bz2
data/tileset/: README.txt  font.xcf.bz2
doc/src/: build.md  download.md  game.md  index.md
download/: index.html
game/: index.html
include/: AnimatedSprite.h  AnimatedSprite.hpp  Animation.hpp  Audio.h  AudioStore.h  Callable.hpp  Character.hpp  DataLoader.h  DataLoader.hpp  Dialog.h  EnergyBar.hpp  Entity.h  Entity.hpp  FadeEffect.hpp  Filesystem.h  Filesystem.hpp  FontMap.h  FontMap.hpp  FontMapLoader.h  FontStore.h  GameConfig.h  GameConfig.hpp  GameLogic.h  GameLogic.hpp  GameLoop.h  GameLoop.hpp  GameMode.h  GameVisuals.hpp  GameWindow.h  GameWindow.hpp  GlobalFunctions.hpp  HashObject.hpp  Image.hpp  ImageImpl.h  ImageImpl.hpp  Input.h  Input.hpp  LayerDefinition.hpp  Logger.h  Logger.hpp  (+41 more)
include/enum/: FaceDir.hpp  GameMode.hpp  MomentumDir.hpp
include/factory/: EntityFactory.hpp  FontMapFactory.hpp  SpriteFactory.hpp
include/impl/: SceneImpl.hpp  ViewportImpl.hpp
include/store/: EntityStore.hpp  FontMapStore.hpp  FontStore.hpp  SceneStore.hpp  SpriteStore.hpp
include/template/: EntityTemplate.hpp
lib/lua/: LICENSE.txt
search/: search_index.json
src/: AnimatedSprite.cpp  Audio.cpp  AudioStore.cpp  Character.cpp  DataLoader.cpp  Dialog.cpp  EnergyBar.cpp  Entity.cpp  FadeEffect.cpp  Filesystem.cpp  FontMap.cpp  FontMapLoader.cpp  FontStore.cpp  GameConfig.cpp  GameLogic.cpp  GameLoop.cpp  GameVisuals.cpp  GameWindow.cpp  GlobalFunctions.cpp  HashObject.cpp  Image.cpp  ImageImpl.cpp  Input.cpp  Logger.cpp  Movie.cpp  MovieFactory.cpp  Object.cpp  ParallaxImage.cpp  Path.cpp  Player.cpp  Renderer.cpp  Scene.cpp  SceneStore.cpp  SingletonRepo.cpp  Sprite.cpp  StrUtil.cpp  TMXLoader.cpp  Texture.cpp  TextureLoader.cpp  Tileset.cpp  (+9 more)
src/factory/: EntityFactory.cpp  FontMapFactory.cpp  MovieFactory.cpp  SpriteFactory.cpp
src/store/: AudioStore.cpp  EntityStore.cpp  FontMapStore.cpp  FontStore.cpp  SceneStore.cpp  SpriteStore.cpp
src/template/: EntityTemplate.cpp
